Changed platformio to print colored prints via esp-idf

--- a/platformio.ini
+++ b/platformio.ini
@@ -15,4 +15,14 @@ build_cache_dir = .pio/build_cache
 platform = espressif32
 board = esp32dev
 framework = espidf
+
+; Set teh serial baud rate
 monitor_speed = 115200
+
+; Enable testing
+test_framework = unity
+test_ignore = test_native
+
+; Enable color printing
+force_color = yes
+monitor_raw = yes
