Got unity unit testing working

--- a/platformio.ini
+++ b/platformio.ini
@@ -22,7 +22,8 @@ monitor_speed = 115200
 ; Enable testing
 test_framework = unity
 test_ignore = test_native
+;test_transport = custom
+; test_testing_command = cmd /c "pio run -t upload"
 
 ; Enable color printing
-force_color = yes
 monitor_raw = yes
