Before Switching back to Arduino Framework

--- a/platformio.ini
+++ b/platformio.ini
@@ -15,15 +15,8 @@ build_cache_dir = .pio/build_cache
 platform = espressif32
 board = esp32dev
 framework = espidf
-
-; Set teh serial baud rate
 monitor_speed = 115200
-
-; Enable testing
 test_framework = unity
 test_ignore = test_native
-;test_transport = custom
-; test_testing_command = cmd /c "pio run -t upload"
-
-; Enable color printing
 monitor_raw = yes
+lib_deps = lbernstone/UncleRus@^1.0.1
