--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,5 +1,17 @@
-idf_component_register(
-    SOURCE_DIR "test_main.c"
-    INCLUDE_DIR "."
-    REQUIRES unity
-)
+
+# cmake_minimum_required(VERSION 3.16.0)
+
+
+# list(APPEND EXTRA_COMPONENTS_DIRS "../lib/")
+# # list(APPEND EXTRA_COMPONENTS_DIRS "./lib/")
+
+# include($ENV{IDF_PATH}/tools/cmake/project.cmake)
+
+# set(TEST_COMPONENTS "user;sensors" CACHE STRING "List of components to test")
+
+# project(MatthewGibson_MMFG1620_rf-embedded-project-Test)
+# idf_component_register(
+#     SOURCE_DIR "test_main.c"
+#     INCLUDE_DIR "."
+#     REQUIRES unity
+# )
