Added monitor speed and raw output flags to platformio.ini config

--- a/platformio.ini
+++ b/platformio.ini
@@ -16,3 +16,10 @@ platform = espressif32
 framework = arduino
 board = esp32dev
 monitor_speed = 115200
+
+; Set the baud rate
+monitor_speed = 115200
+
+; Enable color printing
+force_color = yes
+monitor_raw = yes
