Updated platformio.ini with libraries and test parematers

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,13 +13,22 @@ build_cache_dir = .pio/build_cache
 
 [env:main-project-config]
 platform = espressif32
-framework = arduino
 board = esp32dev
+framework = arduino
+
+; Monitor Speed
 monitor_speed = 115200
 
-; Set the baud rate
-monitor_speed = 115200
+; Testing
+test_speed = 115200
+test_framework = unity
+test_ignore = test_native
+test_build_src = no
 
-; Enable color printing
-force_color = yes
-monitor_raw = yes
+# force_color = yes
+# monitor_raw = yes
+
+lib_deps = 
+	adafruit/Adafruit ADS1X15@^2.6.0
+	electroniccats/MPU6050@^1.4.4
+	adafruit/Adafruit BusIO@^1.17.4
